# cch23-variasuit32

./: .gitignore  Cargo.toml  Rocket.toml  Shuttle.rs  flake.nix
.github/workflows/: main.yml
db/: schema_18.sql
src/: common.rs  day_0.rs  day_1.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  main.rs
templates/day_14/: unsafe.html.hbs
