[package]
name = "cch23-variasuit32"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
chrono = "0.4.31"
data-encoding = "2.5.0"
git2 = { version = "0.18.1", features = [] }
image = { version = "0.24.7", features = ["png"] }
ring = "0.17.7"
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rocket_ws = "0.1.0"
rustemon = "3.2.1"
s2 = { version = "0.0.13", default-features = false }
shuttle-rocket = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["postgres"] }
tar = "0.4.40"
tokio = "1.26.0"
ulid = "1.1.0"
unic-emoji-char = "0.9.0"
uuid = "1.6.1"
